# spadtools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.ipynb  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst  intro.rst  spadtools.rst
examples/: example.ipynb
spadtools/: __init__.py  spadclean.py  spadio.py
src/spadtools/: __init__.py  spadclean.py  spadio.py
tests/: test_spadclean.py  test_spadfile.py  test_spadio.py
